@@ -3,22 +3,21 @@ package ru.yandex.practicum.filmorate.service;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.model.User;
-import ru.yandex.practicum.filmorate.storage.user.UserStorage;
+import ru.yandex.practicum.filmorate.storage.user.UserRepository;
 
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserService {
-    private final UserStorage userStorage;
+    private final UserRepository userStorage;
 
     public User createUser(User user) {
         return userStorage.createUser(user);
     }
 
     public User updateUser(User user) {
+        getUserById(user.getId());
         return userStorage.updateUser(user);
     }
 
@@ -35,34 +34,19 @@ public class UserService {
     }
 
     public User addFriend(int userId, int friendId) {
-        User user = userStorage.getUserById(userId);
-        User friend = userStorage.getUserById(friendId);
-        Set<Integer> userFriendsIds = user.getFriendsIds();
-        Set<Integer> friendFriendsIds = friend.getFriendsIds();
-        userFriendsIds.add(friendId);
-        friendFriendsIds.add(userId);
-        user.setFriendsIds(userFriendsIds);
-        friend.setFriendsIds(friendFriendsIds);
-        return user;
+        getUserById(friendId);
+        return userStorage.addFriend(userId, friendId);
     }
 
     public User removeFriend(int userId, int friendId) {
-        User user = userStorage.getUserById(userId);
-        User friend = userStorage.getUserById(friendId);
-        Set<Integer> userFriendsIds = user.getFriendsIds();
-        Set<Integer> friendFriendsIds = friend.getFriendsIds();
-        userFriendsIds.remove(friendId);
-        friendFriendsIds.remove(userId);
-        user.setFriendsIds(userFriendsIds);
-        friend.setFriendsIds(friendFriendsIds);
-        return user;
+        getUserById(friendId);
+        return userStorage.removeFriend(userId, friendId);
     }
 
     public List<User> getCommonFriends(int userId, int friendId) {
-        User firstUser = userStorage.getUserById(userId);
-        User friend = userStorage.getUserById(friendId);
-        return userStorage.getAllUsers().stream()
-                .filter(user -> firstUser.getFriendsIds().contains(user.getId()) && friend.getFriendsIds().contains(user.getId()))
-                .collect(Collectors.toList());
+        userStorage.getUserById(userId);
+        userStorage.getUserById(friendId);
+        List<Integer> friends = userStorage.getUserFriends(friendId).stream().map(User::getId).toList();
+        return userStorage.getUserFriends(userId).stream().filter(friend -> friends.contains(friend.getId())).toList();
     }
 }
